--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,8 @@ spring.cloud.gateway.routes[0].uri=lb://users-ws
 spring.cloud.gateway.routes[0].predicates[0]=Path=/users/status/check
 spring.cloud.gateway.routes[0].predicates[1]=Method=GET
 spring.cloud.gateway.routes[0].filters[0]=RemoveRequestHeader=Cookie
+#spring.cloud.gateway.routes[0].filters[1]=RewritePath=/users-ws/users/status/check,  /users/status/check
+spring.cloud.gateway.routes[0].filters[1]=RewritePath=/users-ws/(?<segment>.*),  /$\{segment}
 
 
 
