Added routes for Post request

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,16 @@ spring.cloud.gateway.routes[0].filters[0]=RemoveRequestHeader=Cookie
 #spring.cloud.gateway.routes[0].filters[1]=RewritePath=/users-ws/users/status/check,  /users/status/check
 spring.cloud.gateway.routes[0].filters[1]=RewritePath=/users-ws/(?<segment>.*),  /$\{segment}
 
+spring.cloud.gateway.routes[1].id=users-ws
+spring.cloud.gateway.routes[1].uri=lb://users-ws
+spring.cloud.gateway.routes[1].predicates[0]=Path=users-ws/users
+spring.cloud.gateway.routes[1].predicates[1]=Method=POST
+spring.cloud.gateway.routes[1].filters[0]=RemoveRequestHeader=Cookie
+spring.cloud.gateway.routes[1].filters[1]=RewritePath=/users-ws/(?<segment>.*),  /$\{segment}
+
+
+
+
 
 
  
