--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,13 @@
 server.port=8082
 spring.application.name=api-gateway
 eureka.client.service-url.defaultZone=http://localhost:8010/eureka
-spring.cloud.gateway.discovery.locator.enabled=true
-spring.cloud.gateway.discovery.locator.lower-case-service-id=true
+#spring.cloud.gateway.discovery.locator.enabled=true
+#spring.cloud.gateway.discovery.locator.lower-case-service-id=true
 spring.cloud.gateway.routes[0].id=users-status-check
 spring.cloud.gateway.routes[0].uri=lb://users-ws
 spring.cloud.gateway.routes[0].predicates[0]=Path=/users/status/check
 spring.cloud.gateway.routes[0].predicates[1]=Method=GET
+spring.cloud.gateway.routes[0].predicates[2]=Header=Authorization, Bearer (.*) 
 spring.cloud.gateway.routes[0].filters[0]=RemoveRequestHeader=Cookie
 #spring.cloud.gateway.routes[0].filters[1]=RewritePath=/users-ws/users/status/check,  /users/status/check
 spring.cloud.gateway.routes[0].filters[1]=RewritePath=/users-ws/(?<segment>.*),  /$\{segment}
@@ -17,6 +18,7 @@ spring.cloud.gateway.routes[1].predicates[0]=Path=users-ws/users
 spring.cloud.gateway.routes[1].predicates[1]=Method=POST
 spring.cloud.gateway.routes[1].filters[0]=RemoveRequestHeader=Cookie
 spring.cloud.gateway.routes[1].filters[1]=RewritePath=/users-ws/(?<segment>.*),  /$\{segment}
+
 
 
 
