--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,33 +14,31 @@ spring.cloud.gateway.routes[0].filters[1]=RewritePath=/users-ws/(?<segment>.*), 
 spring.cloud.gateway.routes[0].filters[2]=AuthorizationHeaderFilter
 
 
-
-spring.cloud.gateway.routes[1].id=users-ws
-spring.cloud.gateway.routes[1].uri=lb://users-ws
-spring.cloud.gateway.routes[1].predicates[0]=Path=users-ws/users
+spring.cloud.gateway.routes[1].id = users-ws
+spring.cloud.gateway.routes[1].uri = lb://users-ws
+spring.cloud.gateway.routes[1].predicates[0]=Path=/users-ws/users
 spring.cloud.gateway.routes[1].predicates[1]=Method=POST
 spring.cloud.gateway.routes[1].filters[0]=RemoveRequestHeader=Cookie
-spring.cloud.gateway.routes[1].filters[1]=RewritePath=/users-ws/(?<segment>.*),  /$\{segment}
+spring.cloud.gateway.routes[1].filters[1]=RewritePath=/users-ws/(?<segment>.*), /$\{segment}
 
-spring.cloud.gateway.routes[2].id=users-ws-login
-spring.cloud.gateway.routes[2].uri=lb://users-ws
-spring.cloud.gateway.routes[2].predicates[0]=Path=users-ws/users/login
+spring.cloud.gateway.routes[2].id = users-ws-login
+spring.cloud.gateway.routes[2].uri = lb://users-ws
+spring.cloud.gateway.routes[2].predicates[0]=Path=/users-ws/users/login
 spring.cloud.gateway.routes[2].predicates[1]=Method=POST
 spring.cloud.gateway.routes[2].filters[0]=RemoveRequestHeader=Cookie
-spring.cloud.gateway.routes[2].filters[1]=RewritePath=/users-ws/(?<segment>.*),  /$\{segment}
+spring.cloud.gateway.routes[2].filters[1]=RewritePath=/users-ws/(?<segment>.*), /$\{segment}
 
-
-spring.cloud.gateway.routes[3].id=users-ws-get-update-delete
-spring.cloud.gateway.routes[3].uri=lb://users-ws
+spring.cloud.gateway.routes[3].id = users-ws-get-update-delete
+spring.cloud.gateway.routes[3].uri = lb://users-ws
 spring.cloud.gateway.routes[3].predicates[0]=Path=/users-ws/users/**
-spring.cloud.gateway.routes[3].predicates[1]=Method=GET, PUT, DELETE
-spring.cloud.gateway.routes[3].predicates[2]=Header=Authorization, Bearer (.*) 
+spring.cloud.gateway.routes[3].predicates[1]=Method=GET,PUT,DELETE
+spring.cloud.gateway.routes[3].predicates[2]=Header=Authorization, Bearer (.*)
 spring.cloud.gateway.routes[3].filters[0]=RemoveRequestHeader=Cookie
-spring.cloud.gateway.routes[3].filters[1]=RewritePath=/users-ws/(?<segment>.*),  /$\{segment}
-spring.cloud.gateway.routes[3].filters[2]=AuthorizationHeaderFilter
+spring.cloud.gateway.routes[3].filters[1]=AuthorizationHeaderFilter
+spring.cloud.gateway.routes[3].filters[2]=RewritePath=/users-ws/(?<segment>.*), /$\{segment}
 
 
-
+token.secret = hfgry463hf746hf573ydh475fhy5739
 
 
  
